image on mobile view fixed

--- a/src/mediaQueries.css
+++ b/src/mediaQueries.css
@@ -23,7 +23,10 @@
 		display: none;
 		width: 100px;
 	}
-
+	.materialboxed {
+		width: 100%;
+    	height: auto;
+	}
 	.dynamic-container {
 		width: 100%;
 		padding-left: 0px;
